--- a/src/foundation.scss
+++ b/src/foundation.scss
@@ -2,8 +2,8 @@
 @import "~foundation-sites/scss/foundation";
 
 @include foundation-global-styles;
-@include foundation-xy-grid-classes;
-// @include foundation-grid;
+// @include foundation-xy-grid-classes;
+@include foundation-grid;
 // @include foundation-flex-grid;
 // @include foundation-flex-classes;
 @include foundation-typography;
@@ -39,5 +39,5 @@
 // @include foundation-title-bar;
 // @include foundation-tooltip;
 // @include foundation-top-bar;
-// @include foundation-visibility-classes;
-// @include foundation-float-classes;
+@include foundation-visibility-classes;
+@include foundation-float-classes;
