--- a/src/components/Questionnaire.scss
+++ b/src/components/Questionnaire.scss
@@ -23,10 +23,16 @@
       background-color: rgba($primary-color, 0);
       transition: background-color 0.2s linear;
     }
-    &:hover, &.selected {
-      &::before {
-        background-color: rgba($primary-color, 0.7);
-      }
+    &:hover::before {
+      background-color: rgba($primary-color, 0.4);
+    }
+    &.selected::before {
+      background-color: rgba($primary-color, 0.8);
     }
   }
+}
+
+.buttons button {
+  width: 100%;
+  margin: 1rem 0 0;
 }
